# vinca_API

./: .gitignore  notes  pyproject.toml
vinca_API/: __init__.py  api.py  empty.sqlite  messenger.sqlite  sync.py  template.sqlite
vinca_API/authentication/: __init__.py  secret_key.py
vinca_backend/: \  __init__.py  api.py  sync.py  sync_api.py
vinca_backend/authentication/: __init__.py  passwords.csv
